bookinfo/02_reviews_service_v2/istio-v2-authenticated-users.yaml
# Send traffic to v1 of the reviews application except for the "jason" user that goes to v2.
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
  namespace: bookinfo
spec:
  hosts:
  - reviews
  http:
  - match:
    - headers:
        end-user:
          exact: jason
    route:
    - destination:
        host: reviews
        subset: v2
  - route:
    - destination:
        host: reviews
        subset: v1
